[package]
name = "hack_cpu_emulator"
version = "0.1.0"
authors = ["ducaale <sharaf.13@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.9.4", features = ["crossterm"], default-features = false }
crossterm = "0.17"
phf = { version = "0.8", features = ["macros"] }
